--- a/src/app/+patient/modules/patient-new/components/patient-new-form/patient-new-form.component.html
+++ b/src/app/+patient/modules/patient-new/components/patient-new-form/patient-new-form.component.html
@@ -1,5 +1,5 @@
 <form class="patient-new-form__form" nz-form nzLayout="horizontal" [formGroup]="patientForm">
-  <div>
+  <div class="patient-new-form__items-wrapper">
     <nz-form-item>
       <nz-form-label nzRequired>First Name</nz-form-label>
       <nz-form-control nzErrorTip="Please type First Name">
